error.log
srcs/math/raytracing.c:6:1: error: version control conflict marker in file
<<<<<<< Updated upstream
^
srcs/math/raytracing.c:25:1: error: version control conflict marker in file
<<<<<<< Updated upstream
^
2 errors generated.
